# synapse

./: .gitignore  ASSISTANT.md  HEARTBEAT.md  LICENSE  NOW.md  OPERATIONS.md  README.md  SELF.md  USER.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EVOLUTION_PLAN.md  README.md  SECURITY_REVIEW.md  SYNAPSE-SPEC-v1.md  docs.json  index.mdx  mint.json
docs/architecture/: adapters.md  capability-broker.md  deployment.md  memory.md  model-auth.md  operator-surfaces.md  overview.md  session-state-machine.md  skills.md  unified-agent-loop.md
docs/channels/: telegram.mdx
docs/checklists/: implementation-checklist.md  (+1 more)
synapse/: __init__.py  __main__.py  adapters.py  app.py  approvals.py  attachments.py  auth.py  broker.py  capabilities.py  codex_tools.py  diagnosis.py  envfile.py  executors.py  gws.py  hooks.py  identifiers.py  integrations.py  introspection.py  jobs.py  logging.py  memory.py  models.py  operator.py  providers.py  providers_chat.py  queue.py  react_loop.py  repl.py  runtime.py  self_model.py  session.py  setup_flow.py  skill_runtime.py  skills.py  slack_adapter.py  store.py  tui.py  usage.py  workspace.py
tests/: conftest.py  test_api.py  test_approvals.py  test_attachments.py  test_auth.py  test_broker.py  test_codex_tools.py  test_custom_provider.py  test_diagnosis.py  test_finance_broker.py  test_finance_capabilities.py  test_finance_executor.py  test_gateway.py  test_gws.py  test_heartbeat.py  test_identifiers.py  test_integrations.py  test_introspection.py  test_jobs.py  test_live_analyze_router.py  test_mcp_adapter.py  test_mcp_config.py  test_mcp_health.py  test_mcp_registry.py  test_mcp_security.py  test_mcp_store.py  test_mcp_tools.py  test_mcp_transport.py  test_mcp_types.py  test_operator_layer.py  test_provider_streaming.py  test_provider_tools.py  test_providers_prompt.py  test_react_loop.py  test_reminders.py  test_self_model.py  test_self_wiring.py  test_session.py  test_setup_flow.py  test_skill_hot_reload.py  (+20 more)
(+123 files in other folders)
