[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "0.1.0"
description = "Synapse — a lightweight agent runtime that wires channels, models, skills, and workflows into a single async loop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "Pillow>=10.4,<12.0",
  "pydantic>=2.8,<3.0",
  "pypdf>=5.4,<6.0",
  "questionary>=2.0,<3.0",
  "textual>=0.80,<9.0",
  "uvicorn>=0.30,<1.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
finance = [
  "httpx-sse>=0.4,<1.0",
  "yfinance>=0.2,<1.0",
  "numpy>=1.26,<3.0",
  "scipy>=1.12,<2.0",
]

[project.scripts]
synapse = "synapse.__main__:main"

[tool.setuptools]
packages = ["synapse", "synapse.gateway", "synapse.channels", "synapse.channels.telegram", "synapse.config", "synapse.plugins", "synapse.streaming", "synapse.wizard", "synapse.mcp", "synapse.finance"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
